--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,20 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+}
+
+#wall div#tag-2 {
+    display: none;
+}
+
+#wall .parent {
+    display: none;
+}
+
+#wall .parent .slick #tag-5{
+    display: none;
+}
+
+#wall div#tag-3 {
+    display: none;
+}
